# serde-perf

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
